# spouralExcel

./: .gitignore  Readme.md  backup.sql  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
backend/: Dockerfile  manage.py  requirements.txt
backend/apps/excel_app/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
backend/apps/user/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/config/: settings.py  urls.py
backend/excel_app/: admin.py  models.py
backend/media/: image_compressor.py
backend/media/reports/: 20-34_10.11.2024-spoural.xlsx  20-36_10.11.2024-spoural.xlsx
backend/report_scripts/: report.xlsx  report_generator.py
backend/static/: admin_custom.js  report.xlsx
backend/user/: models.py
backend/user/migrations/: 0001_initial.py  0002_test.py
frontend/: .eslintrc.json  .gitignore  Dockerfile  capacitor.config.ts  declarations.d.ts  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  postcss.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  webpack.config.ts
frontend/public/: index.html  manifest.json  manifest.webmanifest
frontend/src/: index.css  index.jsx  index.tsx
frontend/src/layout/: error-handler.tsx  error-view.tsx  global-context.tsx  index-layout.tsx  profile-panel.tsx
media/reports/: 19-59_10.11.2024-spoural.xlsx
scripts/: reload_back.sh  reload_front.sh
static/: report.xlsx
utils/: converter.py  report.xlsx  template.xls
(+112 files in other folders)
